--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "parcel index.html"
+    "dev": "parcel index.html",
+    "prebuild": "rm -rf dist",
+    "build": "parcel build index.html"
   },
   "keywords": [],
   "author": "",
